--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agência Imobiliária</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <header>
@@ -27,17 +32,25 @@
 
 <section class="featured-properties">
     <h2>Imóveis em Destaque</h2>
-    <div class="property-card">
-        <img src="./img/Imovel1.svg" alt="Imóvel 1">
-        <h3>Imóvel 1</h3>
-        <p>Descrição do imóvel e detalhes.</p>
+    <div class="property-cards">
+        <div class="property-card">
+            <img src="./img/Imovel1.svg" alt="Imóvel 1">
+            <h3>Imóvel 1</h3>
+            <p>Descrição do imóvel e detalhes.</p>
+        </div>
+        <div class="property-card">
+            <img src="./img/Imovel2.svg" alt="Imóvel 2">
+            <h3>Imóvel 2</h3>
+            <p>Descrição do imóvel e detalhes.</p>
+        </div>
+        <div class="property-card">
+            <img src="./img/Imovel2.svg" alt="Imóvel 2">
+            <h3>Imóvel 3</h3>
+            <p>Descrição do imóvel e detalhes.</p>
+        </div>
+        <!-- Mais cards de imóveis em destaque -->
     </div>
-    <div class="property-card">
-        <img src="./img/Imovel2.svg" alt="Imóvel 2">
-        <h3>Imóvel 2</h3>
-        <p>Descrição do imóvel e detalhes.</p>
-    </div>
-    <!-- Mais cards de imóveis em destaque -->
+    
 </section>
 
 <section class="management">
