--- a/index.html
+++ b/index.html
@@ -36,17 +36,33 @@
         <div class="property-card">
             <img src="./img/Imovel1.svg" alt="Imóvel 1">
             <h3>Imóvel 1</h3>
-            <p>Descrição do imóvel e detalhes.</p>
+            <p>Um charmoso apartamento com vistas deslumbrantes da cidade. Este imóvel possui um layout elegante e acabamentos de alta qualidade. A sala de estar se abre para uma varanda privativa, perfeita para apreciar o pôr do sol. Quartos espaçosos e banheiros modernos completam o ambiente.</p>
+            <ul class="property-details">
+                <li>Área: 80 m²</li>
+                <li>Quartos: 4</li>
+                <li>Banheiros: 1</li>
+                <li>Garagem: Não</li>
         </div>
         <div class="property-card">
             <img src="./img/Imovel2.svg" alt="Imóvel 2">
             <h3>Imóvel 2</h3>
-            <p>Descrição do imóvel e detalhes.</p>
+            <p>Um charmoso apartamento com vistas deslumbrantes da cidade. Este imóvel possui um layout elegante e acabamentos de alta qualidade. A sala de estar se abre para uma varanda privativa, perfeita para apreciar o pôr do sol. Quartos espaçosos e banheiros modernos completam o ambiente.</p>
+            <ul class="property-details">
+                <li>Área: 100 m²</li>
+                <li>Quartos: 1</li>
+                <li>Banheiros: 3</li>
+                <li>Garagem: Não</li>
         </div>
         <div class="property-card">
             <img src="./img/Imovel2.svg" alt="Imóvel 2">
             <h3>Imóvel 3</h3>
-            <p>Descrição do imóvel e detalhes.</p>
+            <p>Uma casa encantadora com um jardim exuberante. Este imóvel oferece uma sensação acolhedora e charmosa, perfeito para quem busca tranquilidade. A cozinha gourmet é ideal para os amantes da culinária, e o quintal espaçoso é perfeito para entretenimento ao ar livre.</p>
+            <ul class="property-details">
+                <li>Área: 20 m²</li>
+                <li>Quartos: 5</li>
+                <li>Banheiros: 2</li>
+                <li>Garagem: Sim</li>
+            </ul>     
         </div>
         <!-- Mais cards de imóveis em destaque -->
     </div>
