--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 </head>
 <body>
 <header>
-    <h1>Manoel Gomes Imobiliária</h1>
+    <div class="logomanuel">
+        <img src="./img/logo_transparent2.png" alt="Imóvel 2" class="logo">
+        <h1>Manoel Gomes <span> - Imobiliaria </span></h1>
+    </div>
+    
+
     <nav>
         <ul>
             <li><a href="#">Início</a></li>
