Alterações no header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h2>Imóveis em Destaque</h2>
     <div class="property-cards">
         <div class="property-card">
-            <img src="./img/Imovel1.svg" alt="Imóvel 1">
+            <img src="./img/Imovel1.svg" alt="Imóvel 1" class="img">
             <h3>Imóvel 1</h3>
             <p>Um charmoso apartamento com vistas deslumbrantes da cidade. Este imóvel possui um layout elegante e acabamentos de alta qualidade. A sala de estar se abre para uma varanda privativa, perfeita para apreciar o pôr do sol. Quartos espaçosos e banheiros modernos completam o ambiente.</p>
             <ul class="property-details">
@@ -49,7 +49,7 @@
                 <li>Garagem: Não</li>
         </div>
         <div class="property-card">
-            <img src="./img/Imovel2.svg" alt="Imóvel 2">
+            <img src="./img/Imovel2.svg" alt="Imóvel 2" class="img">
             <h3>Imóvel 2</h3>
             <p>Um charmoso apartamento com vistas deslumbrantes da cidade. Este imóvel possui um layout elegante e acabamentos de alta qualidade. A sala de estar se abre para uma varanda privativa, perfeita para apreciar o pôr do sol. Quartos espaçosos e banheiros modernos completam o ambiente.</p>
             <ul class="property-details">
@@ -59,7 +59,7 @@
                 <li>Garagem: Não</li>
         </div>
         <div class="property-card">
-            <img src="./img/Imovel2.svg" alt="Imóvel 2">
+            <img src="./img/Imovel2.svg" alt="Imóvel 2" class="img">
             <h3>Imóvel 3</h3>
             <p>Uma casa encantadora com um jardim exuberante. Este imóvel oferece uma sensação acolhedora e charmosa, perfeito para quem busca tranquilidade. A cozinha gourmet é ideal para os amantes da culinária, e o quintal espaçoso é perfeito para entretenimento ao ar livre.</p>
             <ul class="property-details">
