--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -101,8 +102,17 @@
     <p>Todo o processo, desde a pesquisa até a assinatura do contrato, é digital e conveniente.</p>
 </section>
 
-<footer>
-    <p>&copy; 2023 Agência Imobiliária. Todos os direitos reservados.</p>
+<footer class="footer">
+    <p>Entre em contato conosco:</p>
+    <p>Email: contato@imobiliariadigital.com</p>
+    <p>Telefone: (11) 1234-5678</p>
+
+    <div class="social-icons">
+        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <!-- Adicione links para as redes sociais reais -->
+    </div>
 </footer>
 </body>
 </html>
