Melhor projeto do mundo

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <nav>
         <ul>
             <li><a href="#">Início</a></li>
-            <li><a href="#">Imóveis</a></li>
-            <li><a href="#">Locações</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="./pesquisa.html">Imóveis</a></li>
+            <li><a href="./compra.html">Locações</a></li>
+            <li><a href="#footer">Contato</a></li>
         </ul>
     </nav>
 </header>
@@ -76,17 +76,6 @@
     
 </section>
 
-<section class="management">
-    <h2>Gerencie suas Locações e Finanças</h2>
-    <p>Faça login em nossa plataforma para gerenciar suas locações e acompanhar o status financeiro.</p>
-    <a href="#" class="cta-button">Acessar Plataforma</a>
-</section>
-
-<section class="buying-process">
-    <h2>Processo de Compra Simplificado</h2>
-    <p>Nosso processo de compra foi projetado para ser fácil e intuitivo. Saiba como funciona.</p>
-    <a href="#" class="cta-button">Saiba Mais</a>
-</section>
 
 <section class="digital-marketing">
     <h2>Marketing Digital Imobiliário</h2>
@@ -103,15 +92,15 @@
     <p>Todo o processo, desde a pesquisa até a assinatura do contrato, é digital e conveniente.</p>
 </section>
 
-<footer class="footer">
+<footer class="footer" id="footer">
     <p>Entre em contato conosco:</p>
     <p>Email: manoelgomes@imobiliaria.com</p>
     <p>Telefone: (11) 1234-5678</p>
 
     <div class="social-icons">
-        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://twitter.com/home" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/manoelgomesbr" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/manoelgomesbr/" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/manoelgomesbr/" target="_blank"><i class="fab fa-instagram"></i></a>
         <!-- Adicione links para as redes sociais reais -->
     </div>
 </footer>
